styles/layout.css
@font-face {
  font-family: 'Funnel Sans';
  src: url('/fonts/FunnelSans-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Funnel Sans';
  src: url('/fonts/FunnelSans-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
}

* {
    --bg: #121212;
    --text: #ffffffda;
    --main: #f8c879f0;

    font-family: 'Funnel Sans', sans-serif;
}

body {

    background-color: var(--bg);
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;

    border: 0;
    margin: 0;
}

a {
    color: var(--main); 
}

hr {
    width: 90%;
    margin-top: 2rem;
    margin-bottom: 2rem;

    border-radius: 50%;

    color: #ffffff20
}

.section {
    display: flex;
    justify-content: center;
}

.images {
    position: relative;
    height: 100vh;
    width: 43%;

    display: flex;
    align-items: center;
    justify-content: center;
}

.content {
    height: calc(100vh - 3rem);
    width: 57%;

    padding-top: 3rem;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}



@media (max-width: 750px) {
    .content {
        width: 100%;
        height: auto;
        padding: 0;

        position: absolute;
        top: 30%;
    }
}

